# protogeo

./: .gitmodules  CMakeLists.txt  readme
res/: arc.gs  arc.vs  eqn.gs  geo.fs  geo.vs  grid.gs  grid.vs  poly.fs  poly.gs  poly.vs  sum.fs  sum.gs
src/: imgui_impl_glfw_gl3.cpp  main.cpp  main.h  shader.hpp
